chore: add living documentation