@@ -1,3 +1,5 @@
 --enable-preview
 --enable-native-access=ALL-UNNAMED
 --sun-misc-unsafe-memory-access=allow
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
